--- a/demoey-16thfeb/demoey-16thfeb/demoey-16thfeb.csproj
+++ b/demoey-16thfeb/demoey-16thfeb/demoey-16thfeb.csproj
@@ -72,12 +72,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="circle.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="demoey-16thfeb_TemporaryKey.pfx" />
+    <Compile Include="ifelseprgm.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
@@ -90,6 +85,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
