--- a/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
+++ b/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
@@ -45,7 +45,9 @@
   <ItemGroup>
     <Compile Include="asoperator.cs" />
     <Compile Include="functiontest.cs" />
+    <Compile Include="gotolabel.cs" />
     <Compile Include="loops.cs" />
+    <Compile Include="practiceprograms.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
