--- a/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
+++ b/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="3darray.cs" />
     <Compile Include="andor.cs" />
     <Compile Include="asoperator.cs" />
     <Compile Include="functiontest.cs" />
