practice program exception handling

--- a/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
+++ b/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
@@ -46,6 +46,7 @@
     <Compile Include="3darray.cs" />
     <Compile Include="andor.cs" />
     <Compile Include="asoperator.cs" />
+    <Compile Include="exceptionhandling.cs" />
     <Compile Include="functiontest.cs" />
     <Compile Include="genericprogram.cs" />
     <Compile Include="gotolabel.cs" />
