--- a/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
+++ b/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
@@ -47,6 +47,8 @@
     <Compile Include="andor.cs" />
     <Compile Include="asoperator.cs" />
     <Compile Include="bankbalancepracticeprgm.cs" />
+    <Compile Include="day10classes.cs" />
+    <Compile Include="day10scooterclass.cs" />
     <Compile Include="delegateprgm.cs" />
     <Compile Include="enumprgm.cs" />
     <Compile Include="exceptionhandling.cs" />
