--- a/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
+++ b/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
@@ -48,6 +48,7 @@
     <Compile Include="asoperator.cs" />
     <Compile Include="bankbalancepracticeprgm.cs" />
     <Compile Include="carinheritance.cs" />
+    <Compile Include="copyconstructor.cs" />
     <Compile Include="day10classes.cs" />
     <Compile Include="day10scooterclass.cs" />
     <Compile Include="delegateprgm.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="practiceprograms.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sealedprgm.cs" />
     <Compile Include="TestUserDefinedException.cs" />
     <Compile Include="thiskeywordprgm.cs" />
   </ItemGroup>
