--- a/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
+++ b/eydemo17thfeb/eydemo17thfeb/eydemo17thfeb.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="3darray.cs" />
+    <Compile Include="abstractclassprgm.cs" />
     <Compile Include="andor.cs" />
     <Compile Include="asoperator.cs" />
     <Compile Include="bankbalancepracticeprgm.cs" />
@@ -59,6 +60,7 @@
     <Compile Include="functiontest.cs" />
     <Compile Include="genericprogram.cs" />
     <Compile Include="gotolabel.cs" />
+    <Compile Include="indexerclass.cs" />
     <Compile Include="inheritanceprgm.cs" />
     <Compile Include="interfaceprgm.cs" />
     <Compile Include="jaggedarray.cs" />
@@ -70,9 +72,12 @@
     <Compile Include="overriddingprgm.cs" />
     <Compile Include="paramprgm.cs" />
     <Compile Include="practiceprograms.cs" />
+    <Compile Include="privateconstprgm.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="sealedprgm.cs" />
+    <Compile Include="shapeprgm.cs" />
+    <Compile Include="staticconstructorprgm.cs" />
     <Compile Include="TestUserDefinedException.cs" />
     <Compile Include="thiskeywordprgm.cs" />
   </ItemGroup>
