--- a/dotnetwebapp/dotnetwebapp/dotnetwebapp.csproj
+++ b/dotnetwebapp/dotnetwebapp/dotnetwebapp.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+  <AspNetCoreHostingModel>OutProcess</AspNetCoreHostingModel>
   </PropertyGroup>
 
 </Project>
